hide body overflow to fix incorrect viewport dimensions when reducing window size

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -69,6 +69,7 @@ body {
 	//height: (100)-(4*($body-padding));
 	padding: 0;
 	height: 100%;
+	overflow: hidden;
 }
 
 .hover-tt {
